--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
     "autoload": {
-        "psr-4": {"App\\": "src/"}
+        "psr-4": {
+            "App\\": "src/",
+            "Core\\": "libs/"
+        }
     },
     "autoload-dev": {
-        "psr-4":{"App\\Test\\": "test/"}
+        "psr-4": {"App\\Test\\": "test/"}
     },
     "require-dev": {
         "phpunit/phpunit": "^10.2"
